--- a/microsite/main.html
+++ b/microsite/main.html
@@ -53,7 +53,10 @@
 
         <section id="interests">
             <h2>Zájmy/Koníčky</h2>
-            <p>Velmi rád poslouchám hudbu a rád i jí dělám a pracuju na albu s mým kamarádem</p>
+            <p>Velmi rád poslouchám hudbu</p>
+            <p>Rád chodím do posilovny</p>
+            <p>Miluju sporty i na ně koukat</p>
+            <p>Mám rád videohry</p>
         </section>
 
         <section id="portfolio">
@@ -61,7 +64,7 @@
             <section class="projects">
                 <article class="project" id="project1">
                     <img src="0x130.jpg" alt="Projekt 1">
-                    <h3>Můj první projekt</h3>
+                    <h3>Můj mimo projekt</h3>
                     <p>Hudbě jsem se začal věnovat jako každý jiný – posloucháním melodií, které zněly v rádiu či televizi. Nikdy jsem si nemyslel, že se k hudbě přiblížím natolik, že se stane mou vášní. Vytváření hudby mně však nikdy nenapadlo. I přesto, že to možná není něco velkolepého, každý krok mě posunuje na novou úroveň.
 
                         Začínal jsem jako úplný laik v oblasti hudby, postupně se stávajícím pokročilým posluchačem. Své první kroky ve tvorbě hudby jsem činil na platformě Bandlab, kde jsem zkoušel vytvářet beaty atd. Postupem času jsem se dostal k fázi, kdy jsem začal psát texty. Tato nová fáze mě motivovala pokračovat v tvorbě hudby a neustále se v ní zlepšovat.
@@ -70,6 +73,10 @@
                     </p>
                 </article>
             </section>
+        </section>
+        <section id="projectX">
+            <h4>Další projekty</h2>
+            <p>Budu sem dávat další moje projekty!</p>
         </section>
     </main>
 
